--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "support-system-react-view",
+    "name": "pick-up-point-react",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -14,12 +14,12 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.5.1",
+        "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.11",
-        "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -47,10 +47,11 @@
         ]
     },
     "devDependencies": {
-        "tailwindcss": "^3.3.3",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.58",
         "@types/react": "^18.2.27",
-        "@types/react-dom": "^18.2.12"
+        "@types/react-dom": "^18.2.12",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^4.9.5"
     }
 }
