--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@fontsource/roboto": "^5.0.8",
-        "@mui/icons-material": "^5.14.12",
-        "@mui/lab": "^5.0.0-alpha.147",
-        "@mui/material": "^5.14.12",
-        "@mui/styled-engine-sc": "^5.14.12",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.5.1",
+        "@mui/icons-material": "^5.14.16",
+        "@mui/lab": "5.0.0-alpha.152",
+        "@mui/material": "^5.14.17",
+        "@mui/styled-engine-sc": "6.0.0-alpha.5",
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.5.1",
+        "axios": "^1.6.0",
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0",
+        "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
-        "styled-components": "^5.3.11",
-        "web-vitals": "^2.1.4"
+        "styled-components": "^6.1.0",
+        "web-vitals": "^3.5.0",
+        "yup": "^1.3.2"
     },
     "scripts": {
         "dev": "react-scripts start",
@@ -47,11 +48,11 @@
         ]
     },
     "devDependencies": {
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.58",
-        "@types/react": "^18.2.27",
-        "@types/react-dom": "^18.2.12",
-        "tailwindcss": "^3.3.3",
+        "@types/jest": "^29.5.8",
+        "@types/node": "^20.9.0",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "tailwindcss": "^3.3.5",
         "typescript": "^4.9.5"
     }
 }
