--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.5.1",
         "axios": "^1.6.0",
+        "html5-qrcode": "^2.3.8",
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
