--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-qr-code": "^2.0.12",
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.0",
