--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "scripts": {
         "dev": "react-scripts start",
+        "start": "npx http-server --proxy http://localhost:$PORT? ./build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
