--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "pick-up-point-react",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
@@ -12,9 +13,6 @@
         "@mui/styled-engine-sc": "6.0.0-alpha.5",
         "@mui/x-charts": "^6.18.3",
         "@mui/x-data-grid": "^6.18.1",
-        "@testing-library/jest-dom": "^6.1.4",
-        "@testing-library/react": "^14.0.0",
-        "@testing-library/user-event": "^14.5.1",
         "axios": "^1.6.0",
         "dayjs": "^1.11.10",
         "html5-qrcode": "^2.3.8",
@@ -23,43 +21,29 @@
         "react-dom": "^18.2.0",
         "react-qr-code": "^2.0.12",
         "react-router-dom": "^6.18.0",
-        "react-scripts": "5.0.1",
         "styled-components": "^6.1.0",
-        "web-vitals": "^3.5.0",
         "yup": "^1.3.2"
     },
     "scripts": {
-        "dev": "react-scripts start",
-        "start": "npx http-server --proxy http://localhost:$PORT? ./build",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "dev": "vite --host",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
     },
     "devDependencies": {
         "@mui/x-data-grid-generator": "^6.18.1",
-        "@types/jest": "^29.5.8",
-        "@types/node": "^20.9.0",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
-        "tailwindcss": "^3.3.5",
-        "typescript": "^4.9.5"
+        "@types/react": "^18.2.55",
+        "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.17",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.3.3",
+        "vite": "^5.1.1"
     }
 }
