--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@fontsource/roboto": "^5.0.8",
-        "@mui/icons-material": "^5.14.16",
-        "@mui/lab": "5.0.0-alpha.152",
-        "@mui/material": "^5.14.17",
-        "@mui/styled-engine-sc": "6.0.0-alpha.5",
-        "@mui/x-charts": "^6.18.3",
-        "@mui/x-data-grid": "^6.18.1",
-        "axios": "^1.6.0",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@fontsource/roboto": "^5.0.12",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/lab": "5.0.0-alpha.170",
+        "@mui/material": "^5.15.15",
+        "@mui/styled-engine-sc": "6.0.0-alpha.18",
+        "@mui/x-charts": "^7.2.0",
+        "@mui/x-data-grid": "^6.19.10",
+        "axios": "^1.6.8",
         "dayjs": "^1.11.10",
         "html5-qrcode": "^2.3.8",
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-qr-code": "^2.0.12",
-        "react-router-dom": "^6.18.0",
-        "styled-components": "^6.1.0",
-        "yup": "^1.3.2"
+        "react-router-dom": "^6.22.3",
+        "styled-components": "^6.1.8",
+        "yup": "^1.4.0"
     },
     "scripts": {
         "dev": "vite --host",
@@ -31,19 +31,19 @@
         "preview": "vite preview"
     },
     "devDependencies": {
-        "@mui/x-data-grid-generator": "^6.18.1",
-        "@types/react": "^18.2.55",
-        "@types/react-dom": "^18.2.19",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
-        "eslint": "^8.56.0",
+        "@mui/x-data-grid-generator": "^6.19.10",
+        "@types/react": "^18.2.77",
+        "@types/react-dom": "^18.2.25",
+        "@typescript-eslint/eslint-plugin": "^7.6.0",
+        "@typescript-eslint/parser": "^7.6.0",
+        "@vitejs/plugin-react-swc": "^3.6.0",
+        "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint-plugin-react-refresh": "^0.4.6",
+        "autoprefixer": "^10.4.19",
         "postcss": "^8.4.35",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.1"
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.4.5",
+        "vite": "^5.2.8"
     }
 }
