--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^8.1.0",
         "@typescript-eslint/parser": "^8.1.00",
-        "@vitejs/plugin-react-swc": "^3.7.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react-hooks": "^4.6.2",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@eslint/js": "^9.9.0",
+        "eslint": "^9.9.0",
+        "globals": "^15.9.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "typescript": "^5.5.4",
+        "typescript-eslint": "^8.1.0",
         "vite": "^5.4.1"
     }
 }
