--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "yup": "^1.4.0"
     },
     "scripts": {
-        "dev": "vite --host",
+        "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
@@ -34,7 +34,7 @@
         "@mui/x-data-grid-generator": "^7.13.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@typescript-eslint/eslint-plugin": "^8.1.0",
+        "@typescript-eslint/eslint-plugin": "^8.2.0",
         "@typescript-eslint/parser": "^8.1.00",
         "@vitejs/plugin-react": "^4.3.1",
         "@eslint/js": "^9.9.0",
@@ -46,7 +46,7 @@
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.1.0",
+        "typescript-eslint": "^8.2.0",
         "vite": "^5.4.1"
     }
 }
