--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
     "dependencies": {
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
@@ -24,18 +30,9 @@
         "styled-components": "^6.1.12",
         "yup": "^1.4.0"
     },
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-    },
     "devDependencies": {
-        "@mui/x-data-grid-generator": "^7.13.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@typescript-eslint/eslint-plugin": "^8.2.0",
-        "@typescript-eslint/parser": "^8.1.00",
         "@vitejs/plugin-react": "^4.3.1",
         "@eslint/js": "^9.9.0",
         "eslint": "^9.9.0",
