--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emotion/react": "^11.13.0",
+        "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@fontsource/roboto": "^5.0.14",
-        "@mui/icons-material": "^5.16.7",
-        "@mui/lab": "5.0.0-alpha.173",
-        "@mui/material": "^5.16.7",
-        "@mui/styled-engine-sc": "6.0.0-alpha.18",
-        "@mui/x-charts": "^7.13.0",
-        "@mui/x-data-grid": "^7.13.0",
-        "axios": "^1.7.4",
-        "dayjs": "^1.11.12",
+        "@mui/icons-material": "^6.0.1",
+        "@mui/lab": "6.0.0-beta.8",
+        "@mui/material": "^6.0.1",
+        "@mui/styled-engine-sc": "6.0.1",
+        "@mui/x-charts": "^7.15.0",
+        "@mui/x-data-grid": "^7.15.0",
+        "axios": "^1.7.7",
+        "dayjs": "^1.11.13",
         "html5-qrcode": "^2.3.8",
         "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-qr-code": "^2.0.15",
         "react-router-dom": "^6.26.1",
-        "styled-components": "^6.1.12",
+        "styled-components": "^6.1.13",
         "yup": "^1.4.0"
     },
     "devDependencies": {
-        "@types/react": "^18.3.3",
+        "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "@eslint/js": "^9.9.0",
-        "eslint": "^9.9.0",
+        "@eslint/js": "^9.9.1",
+        "eslint": "^9.9.1",
         "globals": "^15.9.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-        "eslint-plugin-react-refresh": "^0.4.9",
+        "eslint-plugin-react-refresh": "^0.4.11",
         "autoprefixer": "^10.4.20",
-        "postcss": "^8.4.41",
+        "postcss": "^8.4.44",
         "tailwindcss": "^3.4.10",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.2.0",
-        "vite": "^5.4.1"
+        "typescript-eslint": "^8.4.0",
+        "vite": "^5.4.2"
     }
 }
