--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
         "lint": "eslint .",
         "preview": "vite preview"
     },
+    "prettier": {
+        "tabWidth": 2,
+        "singleQuote": false,
+        "trailingComma": "es5",
+        "useTabs": true,
+        "arrowParens": "always",
+        "plugins": [
+            "prettier-plugin-tailwindcss"
+        ]
+    },
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
-        "@fontsource/roboto": "^5.0.14",
+        "@fontsource/roboto": "^5.0.15",
         "@mui/icons-material": "^6.0.2",
         "@mui/lab": "6.0.0-beta.9",
         "@mui/material": "^6.0.2",
@@ -27,7 +37,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-qr-code": "^2.0.15",
-        "react-router-dom": "^6.26.1",
+        "react-router-dom": "^6.26.2",
         "styled-components": "^6.1.13",
         "yup": "^1.4.0"
     },
@@ -42,9 +52,11 @@
         "eslint-plugin-react-refresh": "^0.4.11",
         "globals": "^15.9.0",
         "postcss": "^8.4.45",
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.6",
         "tailwindcss": "^3.4.10",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.5.0",
         "vite": "^5.4.3"
     }
 }
