--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-qr-code": "^2.0.15",
 		"react-router-dom": "^7.0.1",
 		"styled-components": "^6.1.13",
+		"swiper": "^11.1.15",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
