--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
 		"dayjs": "^1.11.13",
 		"html5-qrcode": "^2.3.8",
 		"jwt-decode": "^4.0.0",
+		"qrcode.react": "^4.1.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-qr-code": "^2.0.15",
 		"react-router-dom": "^7.0.1",
 		"styled-components": "^6.1.13",
 		"swiper": "^11.1.15",
