--- a/package.json
+++ b/package.json
@@ -20,44 +20,44 @@
 		]
 	},
 	"dependencies": {
-		"@emotion/react": "^11.13.5",
-		"@emotion/styled": "^11.13.5",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
 		"@fontsource/roboto": "^5.1.0",
-		"@mui/icons-material": "^6.1.9",
-		"@mui/lab": "6.0.0-beta.17",
-		"@mui/material": "^6.1.9",
-		"@mui/styled-engine-sc": "6.1.9",
-		"@mui/x-charts": "^7.23.0",
-		"@mui/x-data-grid": "^7.23.0",
-		"axios": "^1.7.8",
+		"@mui/icons-material": "^6.2.0",
+		"@mui/lab": "6.0.0-beta.19",
+		"@mui/material": "^6.2.0",
+		"@mui/styled-engine-sc": "6.2.0",
+		"@mui/x-charts": "^7.23.2",
+		"@mui/x-data-grid": "^7.23.2",
+		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"html5-qrcode": "^2.3.8",
 		"jwt-decode": "^4.0.0",
-		"qrcode.react": "^4.1.0",
+		"qrcode.react": "^4.2.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.0.2",
 		"styled-components": "^6.1.13",
 		"swiper": "^11.1.15",
-		"yup": "^1.4.0"
+		"yup": "^1.5.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.16.0",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@eslint/js": "^9.17.0",
+		"@types/react": "^18.3.16",
+		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.16.0",
-		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint": "^9.17.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.13.0",
 		"postcss": "^8.4.49",
-		"prettier": "^3.4.1",
+		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "^3.4.15",
+		"tailwindcss": "^3.4.16",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.17.0",
+		"typescript-eslint": "^8.18.0",
 		"vite": "^5.4.11"
 	}
 }
