--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@mui/styled-engine-sc": "6.2.0",
 		"@mui/x-charts": "^7.23.2",
 		"@mui/x-data-grid": "^7.23.2",
+		"@mui/x-date-pickers": "^7.23.2",
 		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
